--- a/index.html
+++ b/index.html
@@ -2,14 +2,46 @@
 <html>
   <head>
       <title>Secret Agent Supply Inc.</title>
-      <!-- <link href="reset.css" type="text/css" rel="stylesheet"> -->
+      <link href="./resources/css/reset.css" type="text/css" rel="stylesheet">
       <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <!--logo and title-->
     <header>
+      <div id="logo">
+        <img src="resources/images/logo.png" alt="Logo">
+      </div>
+      <div id="header">
+        <h2>Secret Agent Supply Inc.</h2>
+      </div>
     </header>
+    <!--main page content-->
+    <div id="content">
+      <div id="main-banner">
+        <div id="banner-text">
+          <h2>New arrival</h2>
+          <h1>Sport bikes and motorcycles</h1>
+        </div>
+      </div>
+      <!--navigation bar-->
+      <div class="nav-bar">
+        <ul>
+          <li>Eyewear<li>
+          <li>Apparel<li>
+          <li>Gadgets<li>
+          <li>Vehicles<li>
+          <li>Glasses<li>
+          <li>Contact<li>
+        </ul>
+      </div>
 
+
+    </div>
+    <!--footer & copyright-->
     <footer>
+      <p id="copyright">Copyright Secret Agent Supply Inc.</p>
     </footer>
   </body>
 </html>
+
+<!-- logo, main banner, navigation, product grid, location, hours, and footer -->
