HTML base complete

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <h2>Secret Agent Supply Inc.</h2>
       </div>
     </header>
-    <!--main page content-->
     <div id="content">
+      <!--main banner-->
       <div id="main-banner">
         <div id="banner-text">
           <h2>New arrival</h2>
@@ -24,7 +24,7 @@
         </div>
       </div>
       <!--navigation bar-->
-      <div class="nav-bar">
+      <nav class="nav-bar">
         <ul>
           <li>Eyewear<li>
           <li>Apparel<li>
@@ -33,11 +33,56 @@
           <li>Glasses<li>
           <li>Contact<li>
         </ul>
+      </nav>
+      <!--product grid-->
+      <div id="product-grid">
+        <div class="product-block">
+          <div class="product-block-image">
+            <img src="resources/images/pen.png" alt="Exploding Pen">
+          </div>
+          <div class="product-block-title">
+            <h4>Exploding Pen</h4>
+          </div>
+        </div>
+        <div class="product-block">
+          <div class="product-block-image">
+            <img src="resources/images/watch.png" alt="Cellular Watch">
+          </div>
+          <div class="product-block-title">
+            <h4>Cellular Watch</h4>
+          </div>
+        </div>
+        <div class="product-block">
+          <div class="product-block-image">
+            <img src="resources/images/glasses.png" alt="Thermal Glasses">
+          </div>
+          <div class="product-block-title">
+            <h4>Thermal Glasses</h4>
+          </div>
+        </div>
       </div>
-
-
+      <!--location and hours-->
+      <div id="company-details">
+        <div class="details-block" id="location">
+          <div class="details-block-title">
+            <h4>Location</h4>
+          </div>
+          <div class="details-text">
+            <p>-47.346436, 84.32354</p>
+          </div>
+        </div>
+      </div>
+      <div class="details-block" id="hours">
+        <div class="details-block-title">
+          <h4>Hours</h4>
+        </div>
+        <div class="details-text">
+          <p>0800 - 1800</p>
+        </div>
+      </div>
     </div>
-    <!--footer & copyright-->
+    </div>
+    <!--footer-->
     <footer>
       <p id="copyright">Copyright Secret Agent Supply Inc.</p>
     </footer>
