--- a/index.html
+++ b/index.html
@@ -6,35 +6,41 @@
       <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <!--logo and title-->
+
     <header>
-      <div id="logo">
-        <img src="resources/images/logo.png" alt="Logo">
-      </div>
-      <div id="header">
-        <h2>Secret Agent Supply Inc.</h2>
+      <div class="container">
+        <div id="logo">
+          <img src="resources/images/logo.png" alt="Logo">
+        </div>
+        <div id="header-text">
+          <h2>Secret Agent Supply Inc.</h2>
+        </div>
       </div>
     </header>
-    <div id="content">
-      <!--main banner-->
-      <div id="main-banner">
+
+    <div id="main-banner">
+      <div class="container">
         <div id="banner-text">
           <h2>New arrival</h2>
           <h1>Sport bikes and motorcycles</h1>
         </div>
       </div>
-      <!--navigation bar-->
-      <nav class="nav-bar">
+    </div>
+
+    <nav id="main-nav">
+      <div class="container">
         <ul>
-          <li>Eyewear<li>
-          <li>Apparel<li>
-          <li>Gadgets<li>
-          <li>Vehicles<li>
-          <li>Glasses<li>
-          <li>Contact<li>
+          <li>Eyewear</li>
+          <li>Apparel</li>
+          <li>Gadgets</li>
+          <li>Vehicles</li>
+          <li>Glasses</li>
+          <li>Contact</li>
         </ul>
-      </nav>
-      <!--product grid-->
+      </div>
+    </nav>
+
+    <div class="container">
       <div id="product-grid">
         <div class="product-block">
           <div class="product-block-image">
@@ -61,9 +67,11 @@
           </div>
         </div>
       </div>
-      <!--location and hours-->
+    </div>
+
+    <div class="container">
       <div id="company-details">
-        <div class="details-block" id="location">
+        <div class="details-block">
           <div class="details-block-title">
             <h4>Location</h4>
           </div>
@@ -71,22 +79,23 @@
             <p>-47.346436, 84.32354</p>
           </div>
         </div>
-      </div>
-      <div class="details-block" id="hours">
-        <div class="details-block-title">
-          <h4>Hours</h4>
-        </div>
-        <div class="details-text">
-          <p>0800 - 1800</p>
+        <div class="details-block">
+          <div class="details-block-title">
+            <h4>Hours</h4>
+          </div>
+          <div class="details-text">
+            <p>0800 - 1800</p>
+          </div>
         </div>
       </div>
     </div>
-    </div>
-    <!--footer-->
+
     <footer>
-      <p id="copyright">Copyright Secret Agent Supply Inc.</p>
+      <div class="container">
+        <div id="copyright">
+          <p>Copyright Secret Agent Supply Inc.</p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
-
-<!-- logo, main banner, navigation, product grid, location, hours, and footer -->
